...
            Snackbar(
                dismissAction = {
                    Text(
                        "OK",
                        modifier = Modifier
                            .clickable { weatherViewModel.errorShown() }
                            .testTag("ErrorShown")
                    )
                }
            ) {
                Text(it)
            }
        }
...
        }

        Row(
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.Center
        ){
            ForecastButton(onForecastClicked)
        }
    }
}

@Composable
fun ZipCode(zipClicked: (Int) -> Unit,defaultClicked:() -> Unit) {
...
            style = TextStyle(
                fontFamily = openSans,
            )
        )

        MyLocationButton()
        MenuButton(zipClicked,defaultClicked)
    }
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun MenuButton(zipClicked: (Int) -> Unit,defaultClicked:() -> Unit){
...
        colors = ButtonDefaults.buttonColors(
            containerColor = Color(255, 255, 255,0)
        ),
        shape = CircleShape,
        modifier = Modifier
            .size(60.dp)
            .testTag("LocationButton"),
        contentPadding = PaddingValues(0.dp)
    ) {
        Image(
            painter = painterResource(R.drawable.my_location_24px) ,
            contentDescription = "My Location"
        )
...
